--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
     "php": ">=5.4"
   },
   "autoload": {
-    "psr-0": { "Carica\\Io": "src" }
+    "psr-4": {
+      "Carica\\Io\\": "src\\"
+    }
   }
 }
