--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,6 @@
 <phpunit
   backupGlobals="false"
-  backupStaticAttributes="false"
-  syntaxCheck="false">
+  backupStaticAttributes="false">
   <testsuites>
     <testsuite name="Carica\Io">
       <directory suffix="Test.php">tests</directory>
