--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ php:
   - 7.2snapshot
   - 7.3
   - 7.3snapshot
-  - 7.4
   - 7.4snapshot
   - nightly
 
@@ -16,7 +15,7 @@ matrix:
 before_install:
   - composer self-update
   - composer clear-cache
-  - wget https://phar.phpunit.de/phpunit.phar
+  - wget -O phpunit.phar https://phar.phpunit.de/phpunit-8.3.phar
 
 install: composer install
 
