--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ notifications:
       - https://webhooks.gitter.im/e/f0abd75c9ea61d414afa
     on_success: always
     on_failure: always
-    on_start: false
+    on_start: never
